--- a/wxDoctor/pages/pay/pay.wxss
+++ b/wxDoctor/pages/pay/pay.wxss
@@ -1,6 +1,6 @@
 @import "../template/drinfo/drinfo.wxss";
 .pay-money-tip {
-  font-size: 30rpx;
+  font-size: 34rpx;
   color: #282828;
   line-height: 150%;
   margin-top: 99rpx;
@@ -8,10 +8,14 @@
   flex-direction: row;
   align-items: center;
 }
+.pay-form{
+  width: 64%;
+}
 .pay-money {
-  font-size: 40rpx;
+  font-size: 44rpx;
   color: #f1951c;
 }
 .pay-btn {
+  width: 100%;
   margin-top: 24rpx;
 }
