--- a/wxDoctor/app.wxss
+++ b/wxDoctor/app.wxss
@@ -13,6 +13,7 @@ page,view,text,input,button,image{
   /**justify-content: space-between;**/
   box-sizing: border-box;
   padding-botton:40rpx;
+  position: relative;
 } 
 .g-tac {
     text-align: center;
@@ -53,4 +54,35 @@ page,view,text,input,button,image{
   -webkit-transform: translate(-50%, -50%);
   color: #fff;
   font-size: 28rpx;
+  z-index: 100;
 }
+.bottom-btn {
+  width: 100%;
+  height: 98rpx;
+  line-height: 98rpx;
+  background-color: #1ed2af;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  border-radius: 0;
+  color: #fff;
+  font-size: 36rpx;
+}
+.none-tip {
+  width: 100%;
+  display: block;
+  color: #b4b4b4;
+  font-size: 28rpx;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.img-add {
+  width: 40rpx;
+  height: 40rpx;
+  margin-right: 10rpx;
+}
+
