--- a/wxDoctor/pages/drchat/drchat.wxml
+++ b/wxDoctor/pages/drchat/drchat.wxml
@@ -1,14 +1,15 @@
-<view class="container drchat">
-  <view class="drchat-menu">
-    <text class="menu-pait g-tac" bindtap="getPatient">获取患者信息</text> 
-    <text class="menu-pait g-tac" bindtap="endInquiry">结束问诊</text>
+<view class="container drchat" wx:if="{{mounted}}">
+  <view class="drchat-menu" wx:if="{{!end}}">
+    <text class="menu-pait g-tac" bindtap="getPatient">获取就诊人信息</text> 
+    <text class="menu-pait colorb2a g-tac" bindtap="endInquiry">结束咨询</text>
   </view> 
+  <view wx:else class="menu-end g-tac">该就诊人已结束咨询</view>
   <view class="dr-patient" wx:if="{{patientShow}}"> 
     <view class="dr-patient-info">
-      <text class="info-tit g-tac">患者信息：</text>
-      <view class="info-list"><text class="weight500">姓</text><text class="weight500">名：</text><text>{{patientInfo.name}}</text></view>
-      <view class="info-list"><text class="weight500">医疗卡号：</text><text>{{patientInfo.card}}</text></view>
-      <view class="info-list"><text class="weight500">联系电话：</text><text>{{patientInfo.phone}}</text></view>
+      <text class="info-tit g-tac">就诊人信息：</text>
+      <view class="info-list"><text class="weight500">姓</text><text class="weight500">名：</text><text>{{ptInfo.name}}</text><text wx:if="{{ptInfo.gender}}">{{ptInfo.gender==1 ? '男' : '女'}}</text><text wx:if="{{ptInfo.age}}">{{ptInfo.age}}岁</text></view>
+      <view class="info-list"><text class="weight500">医疗卡号：</text><text>{{ptInfo.mcard || '-'}}</text></view>
+      <view class="info-list"><text class="weight500">联系电话：</text><text>{{ptInfo.phone}}</text></view>
     </view>
   </view>
   <scroll-view class="drchat-info" scroll-y style="height: 100%;" 
@@ -16,32 +17,50 @@
       bindscrolltolower="lower" 
       bindscroll="scroll" 
       scroll-top="{{scrollTop}}"
-      scroll-into-view="red">
-    <view wx:for="{{chatLists}}" wx:key="chat">
-      <text class="g-tac drchat-time" wx:if="{{item.timeshow}}">{{item.timer}}</text>
-      <view wx:if="{{item.dr}}" class="drchat-r">
-        <image class="drchat-head  drchat-head-r" src="../../images/login/img_ownpic.png"/>
-        <text class="drchat-msg drchat-msg-r">{{item.text}}</text>
+      scroll-into-view="{{toView}}">
+    <view wx:for="{{chatLists}}" wx:for-index="idx" id="{{'list'+ item.seq}}">
+      <text class="g-tac drchat-time" wx:if="{{item.timeshow}}">{{item.ctime}}</text>
+      <view wx:if="{{item.flag}}" class="drchat-r">
+        <image class="drchat-head-r" src="{{item.drHead}}"/>
+        <view wx:if="{{item.type==1}}" class="drchat-msg-r">{{item.content}}
+          <image class="chat-talk chat-talk-r" src="../../images/login/img_talk.png"/>
+        </view>
+        <view wx:else class="drchat-msg drchat-msg-r">
+          <image class="chat-img" mode="aspectFill" src="{{item.content}}" data-src="{{item.content}}" bindtap="previewImg"/>
+          <image class="chat-talk chat-talk-r" src="../../images/login/img_talk.png"/>
+        </view>
       </view>
       <view wx:else class="drchat-l">
-        <image class="drchat-head" src="{{item.head}}"/>
-        <view class="drchat-msg">{{item.text}}</view>
+        <image class="drchat-head" src="{{item.ptHead}}"/>
+        <view wx:if="{{item.type==1}}" class="drchat-msg">{{item.content}}
+          <image class="chat-talk chat-talk-l" src="../../images/login/img_talk_white.png"/>
+        </view>
+        <view wx:if="{{item.type==2}}" class="drchat-msg">
+          <image class="chat-img" mode="aspectFill" src="{{item.content}}" data-src="{{item.content}}" bindtap="previewImg"/>
+          <image class="chat-talk chat-talk-l" src="../../images/login/img_talk_white.png"/>
+        </view>
       </view>
     </view>
-    <text class="red" id="red">123</text>
   </scroll-view> 
   <view class="sub-chat">
-    <input class="chat-ipt" bindinput="bindKeyInput" type="text"></input>
+    <input class="chat-ipt" bindinput="bindKeyInput" 
+      value="{{iptVal}}" 
+      type="text"
+      cursor-spacing="20"
+      bindconfirm="tapSub"
+      confirm-hold="true"
+      confirm-type="send"></input>
     <image class="chat-pic" src="../../images/patient/ico_camera.png" bindtap="makImg"></image>
     <button class="chat-btn" bindtap="tapSub">发送</button>
   </view>
   <view class="drchat-shadow" wx:if="{{endShow}}">
     <view class="end-quiry">
-      <text class="g-tac end-tit">结束本次问诊</text>
+      <text class="g-tac end-tit">结束本次咨询</text>
       <view class="end-btn-con">
         <button class="end-btn" bindtap="cancelEnd">取消</button>
         <button class="end-btn" bindtap="checkEnd">结束</button>
       </view>
     </view>
   </view>
+    <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
 </view>
