--- a/wxDoctor/pages/drconfirm/drconfirm.wxss
+++ b/wxDoctor/pages/drconfirm/drconfirm.wxss
@@ -56,7 +56,7 @@
   margin:  50rpx 0 36rpx;
   line-height: 150%;
   color: #969696;
-  font-size: 26rpx;
+  font-size: 30rpx;
 }
 .dr-code {
   width: 400rpx;
@@ -66,7 +66,45 @@
 }
 .dr-text {
   display: block;
-  font-size: 30rpx;
+  font-size: 34rpx;
   color: #282828;
   line-height: 150%;
+}
+.img-box {
+  width: 400rpx;
+  height: 400rpx;
+  padding: 23rpx;
+  margin: 36rpx auto 34rpx;
+  border:1rpx solid #b4b4b4
+}
+.drconfirm-codeimg {
+  width: 354rpx;
+  height: 354rpx;
+}
+.img-tip {
+  font-size: 28rpx;
+  color: #fff;
+  position: absolute;
+  bottom: 20rpx;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+}
+.preview-code {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #000;
+  z-index: 20;
+}
+.preview-code image {
+  width: 500rpx;
+  height: 500rpx;
+  position: absolute;
+  top:  50%;
+  left: 50%;
+  margin-left: -250rpx;
+  margin-top: -250rpx;
 }
