--- a/wxDoctor/pages/drpatient/drpatient.wxss
+++ b/wxDoctor/pages/drpatient/drpatient.wxss
@@ -43,10 +43,10 @@
   flex-direction: column;
   justify-content: space-between;
   width: 70%;
-  padding-bottom: 10rpx;
+  padding: 10rpx 0;
 }
 .info-text-name {
-  font-size: 32rpx;
+  font-size: 36rpx;
   font-weight: 500;
   color: #282828;
 }
@@ -62,18 +62,43 @@
 }
 
 /** drcode **/
-.doctorcode-img {
+.img-box {
   width: 400rpx;
   height: 400rpx;
+  padding: 23rpx;
   margin: 259rpx auto 0;
+  border:1rpx solid #b4b4b4
+}
+.drconfirm-codeimg {
+  width: 354rpx;
+  height: 354rpx;
 }
 .doctorcode-text {
   display: block;
   margin-top: 34rpx;
   line-height: 80%;
-  font-size: 30rpx;
+  font-size: 34rpx;
   color: #282828;
 }
 .doctorcode-btn {
   margin-top: 120rpx;
 }
+.preview-code {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #000;
+  z-index: 20;
+}
+.preview-code image {
+  width: 500rpx;
+  height: 500rpx;
+  position: absolute;
+  top:  50%;
+  left: 50%;
+  margin-left: -250rpx;
+  margin-top: -250rpx;
+}
+
