--- a/wxDoctor/pages/patientchat/patientchat.wxss
+++ b/wxDoctor/pages/patientchat/patientchat.wxss
@@ -4,38 +4,6 @@
   background-color: #f0eff5;
   position: relative;
 }
-.drchat-menu {
-  width: 100%;
-  height: 90rpx;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #fff;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10;
-}
-.drchat-menu text {
-  display: block;
-  width: 50%;
-  font-size: 30rpx;
-  color: #1ed2af;
-}
-.drchat-menu text:last-child {
-  border-left: 1px solid #dcdcdc;
-}
-.dr-patient {
-  width: 100%;
-  height: 349rpx;
-  padding: 37rpx 60rpx 54rpx;
-  position: fixed;
-  top: 90rpx;
-  left: 0;
-  z-index: 20;
-  background-color: #f0eff5;
-}
 .dr-patient-info {
   width: 100%;
   height: 258rpx;
@@ -98,6 +66,7 @@
   border-radius: 10rpx;
   border-top-left-radius: 0;
   position: relative;
+  font-size: 32rpx;
 }
 .drchat-head-r {
   width: 70rpx;
@@ -110,10 +79,11 @@
   display: inline-block;
   margin-left: 20rpx;
   padding: 24rpx 30rpx;
-  background-color: #d7f2ec;
+  background-color: #bef1e4;
   border-top-left-radius: 10rpx;
   border-top-right-radius: 0;
   position: relative;
+  font-size: 32rpx;
 }
 .chat-talk {
   width: 20rpx;
@@ -125,8 +95,8 @@
   left: 0;
 }
 .chat-img {
-  width: 200rpx;
-  height: 100rpx;
+  width: 240rpx;
+  height: 180rpx;
 }
 .chat-talk-r {
   right:  -16rpx;
@@ -170,6 +140,7 @@
   font-size: 28rpx;
   color: #fff;
   background-color: #1ed2af;
+  margin: 0;
 }
 .red {
   height: 100rpx;
@@ -185,4 +156,7 @@
   top: 0;
   left: 0;
   background-color: #f0eff5;
+}
+.end-btn {
+  background-color: #c9c9c9;
 }
