--- a/wxDoctor/pages/patientinfo/patientinfo.wxml
+++ b/wxDoctor/pages/patientinfo/patientinfo.wxml
@@ -1,22 +1,28 @@
 <!--index.wxml-->
 <view class="container patientinfo">
-  <view class="patientinfo-list" wx:for="{{info}}" wx:for-index="idx" wx:key="ptinfo">
-    <view class="patientinfo-list-top" data-index="{{idx}}" bindtap="goPay">
-      <view>
-        <text class="list-top-name">{{item.name}}</text>
-        <text class="list-top-text" wx:if="{{item.mcard}}">{{item.mcard}}</text>
+  <scroll-view class="patient-inner" scroll-y style="height: 100%;">
+    <view class="patientinfo-list" wx:for="{{info}}" wx:for-index="idx" wx:key="ptinfo">
+      <view class="patientinfo-list-top" data-index="{{idx}}" bindtap="goPay">
+        <view>
+          <text class="list-top-text">{{item.name}}</text>
+          <text class="list-top-text" wx:if="{{item.gender}}">{{item.gender==1 ? '男' : '女'}}</text>
+          <text class="list-top-text" wx:if="{{item.age}}" >{{item.age}}岁</text>
+          <text class="list-top-text" wx:if="{{item.mcard}}">{{item.mcard}}</text>
+        </view>
       </view>
-      <text class="list-top-text list-top-phone">{{item.phone}}</text>
-    </view>
-    <view class="patientinfo-list-bot">
-      <view class="list-bot-img g-tac" data-index="{{idx}}" bindtap="delPt">
-          <image src="../../images/patient/ico_trash.png"></image>
+      <view class="patientinfo-list-top patientinfo-list-mid" bindtap="goPay">
+        <text class="list-top-text">{{item.phone}}</text>
       </view>
-      <view class="list-bot-img g-tac" data-index="{{idx}}" bindtap="editPt">
-        <image src="../../images/patient/ico_write.png"></image>
+      <view class="patientinfo-list-bot">
+        <view class="list-bot-img g-tac" data-index="{{idx}}" bindtap="delPt">
+            <image src="../../images/patient/ico_trash.png"></image>
+        </view>
+        <view class="list-bot-img g-tac" data-index="{{idx}}" bindtap="editPt">
+          <image src="../../images/patient/ico_write.png"></image>
+        </view>
       </view>
-    </view>
-  </view>  
-  <button class="patientinfo-btn g-tac" bindtap="addPt">新增患者</button>
+    </view> 
+  </scroll-view> 
+  <button class="bottom-btn g-tac" bindtap="addPt"><image class="img-add" src="../../images/login/ico_add.png"/>新增就诊人</button>
   <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
 </view>
