--- a/wxDoctor/pages/pay/pay.wxml
+++ b/wxDoctor/pages/pay/pay.wxml
@@ -2,7 +2,9 @@
 <import src="../template/drinfo/drinfo.wxml"/>
 <view class="container">
   <template is="item" data="{{drinfo:info}}"/>
-  <text class="pay-money-tip g-tac">本次问诊费用<text class="pay-money">{{info.fee}}</text>元\n支付后可跟医生联系问诊</text>
-  <button class="btn pay-btn" bindtap="payMoney">微信支付</button>
+  <text class="pay-money-tip g-tac">本次咨询费用<text class="pay-money">{{info.fee}}</text>元\n支付后可跟医生联系咨询</text>
+  <form class="pay-form" bindsubmit="payMoney" reportSubmit="true">
+      <button class="btn pay-btn" formType="submit">微信支付</button>
+  </form>
   <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
 </view>
