--- a/wxDoctor/pages/scancode/scancode.wxml
+++ b/wxDoctor/pages/scancode/scancode.wxml
@@ -1,5 +1,6 @@
 <view class="container">
   <image class="scan-img" src="../../images/login/ico_report.png" background-size="cover"></image>
-  <text class="scan-text g-tac">欢迎使用东莞回诊通\n请扫描二维码绑定医生</text>
+  <text class="scan-text g-tac">欢迎使用健康莞家\n请扫描二维码绑定医生</text>
   <button class="btn scan-btn" bindtap="getcode">扫描医生二维码</button>
+  <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
 </view>
