--- a/wxDoctor/pages/wallet/wallet.wxml
+++ b/wxDoctor/pages/wallet/wallet.wxml
@@ -1,14 +1,14 @@
 <view class="container wallet">
   <view class="wallet-list">
     <view class="list-inner">
-      <text class="list-inner-tit">您已收到问诊费：</text>
+      <text class="list-inner-tit">您已收到咨询费：</text>
       <view class="list-inner-r">
         <text class="list-inner-money">{{info.balance ? info.balance /100 : 0}}</text>
         <text class="list-inner-unit">元</text>
       </view>
     </view>
     <view class="list-inner">
-      <text class="list-inner-tit">历史收到问诊费：</text>
+      <text class="list-inner-tit">历史收到咨询费：</text>
       <view class="list-inner-r">
         <text class="list-inner-money">{{info.total ? info.total/100 :0}}</text>
         <text class="list-inner-unit">元</text>
