--- a/wxDoctor/pages/writepatient/writepatient.wxss
+++ b/wxDoctor/pages/writepatient/writepatient.wxss
@@ -9,8 +9,12 @@
   font-size: 34rpx;
   margin: 24rpx 0 52rpx;
 }
-.binddr-ipt {
+.pt-form {
   width: 92%;
+  margin: 0 auto;
+}
+.binddr-ipt {
+  width: 100%;
   height: 84rpx;
   display: flex;
   flex-direction: row;
@@ -18,17 +22,36 @@
   border-bottom: 1rpx solid #dcdcdc;
 }
 .ipt-l{
-  width: 21%;
+  padding-left: 18rpx;
+  width: 30%;
   text-align: justify;
   font-size: 36rpx;
   font-weight: 500;
   color: #282828;
   margin-right: 57rpx;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
+  position: relative;
 }
 .binddr-ipt-name {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.ipt-l::before {
+  display: block;
+  width: 17rpx;
+  height: 17rpx;
+  content: "*";
+  position: absolute;
+  top:  4rpx;
+  left: 0;
+  color: #ff001f;
+}
+.ipt-card::before {
+  content: '';
 }
 .ipt-r-holder {
   font-size: 36rpx;
@@ -36,5 +59,11 @@
 }
 .bindder-btn {
   margin-top: 115rpx;
+}
+.binddr-gender {
+  margin-right: 20rpx;
+}
+.radio-icon {
+  margin-right: 10rpx;
 }
 
