--- a/wxDoctor/pages/binddrlist/list.wxml
+++ b/wxDoctor/pages/binddrlist/list.wxml
@@ -1,12 +1,12 @@
 <!--index.wxml-->
 <view class="container">
   <scroll-view scroll-y style="height: 100%;"
-    bindscrolltoupper="upper" 
-    bindscrolltolower="lower" 
-    bindscroll="scroll" 
+    bindscrolltoupper="upper"
+    bindscrolltolower="lower"
+    bindscroll="scroll"
     scroll-top="{{scrollTop}}">
-    <view class="binddoctor-list" wx:for="{{info}}" 
-      wx:key="mydr" 
+    <view class="binddoctor-list" wx:for="{{info}}"
+      wx:key="mydr"
       wx:for-index="idx">
       <image class="binddoctor-img" src="{{item.doctor.headurl}}" data-index="{{idx}}" bindtap="delDr"></image>
       <view class="binddoctor-info"  data-index="{{idx}}" bindtap="goPt">
@@ -17,7 +17,7 @@
         </view>
         <view wx:if="{{item.flag}}">
           <text class="chat-time">{{item.chat.ctime}}</text>
-          <text class="chat-text g-ellipsis">{{item.chat.type===1 ? item.chat.content :'[图片]'}}</text>
+          <text class="chat-text g-ellipsis" wx:if="{{item.chat.type}}">{{item.chat.type==1 ? item.chat.content :'[图片]'}}</text>
         </view>
         <view wx:else>
           <text class="click-inquiry">点击咨询开始咨询</text>
@@ -27,5 +27,5 @@
   </scroll-view>
   <text class="none-tip g-tac" wx:if="{{infoNull}}">您还没有已经绑定的医生，快去绑定吧~</text>
   <button class="bottom-btn g-tac" bindtap="addDr"><image class="img-add" src="../../images/login/ico_add.png"/><text>绑定新医生</text></button>
-  <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text> 
+  <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
 </view>
