--- a/wxDoctor/pages/patientchat/patientchat.wxss
+++ b/wxDoctor/pages/patientchat/patientchat.wxss
@@ -105,7 +105,7 @@
   box-sizing: border-box;
   height: 98rpx;
   width: 100%;
-  padding: 0 30rpx;
+  padding: 0 20rpx;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -118,7 +118,7 @@
 }
 .chat-ipt {
   box-sizing: border-box;
-  width: 489rpx;
+  width: 627rpx;
   height: 70rpx;
   line-height: 70rpx;
   padding: 0 10rpx;
@@ -130,7 +130,7 @@
 .chat-pic {
   width: 66rpx;
   height: 66rpx;
-  margin: 18rpx;
+  margin: 18rpx 0 18rpx 18rpx;
 }
 .chat-btn {
   height: 70rpx;
