--- a/wxDoctor/pages/patientinfo/patientinfo.wxss
+++ b/wxDoctor/pages/patientinfo/patientinfo.wxss
@@ -16,7 +16,7 @@
   background-color: #fff;
   border:  1rpx solid #1ed2af;
   border-radius: 10rpx;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2)
+  box-shadow: 0 0 10rpx rgba(0, 0, 0, 0.2)
 }
 .patientinfo-list-top {
   width: 100%;
@@ -59,5 +59,5 @@
   height: 34rpx;
 }
 .list-bot-img:last-child{
-  border-left: 1px solid #fff;
+  border-left: 1rpx solid #fff;
 }
