--- a/wxDoctor/pages/drchat/drchat.wxml
+++ b/wxDoctor/pages/drchat/drchat.wxml
@@ -6,9 +6,8 @@
   <view wx:else class="menu-end g-tac">该就诊人已结束咨询</view>
   <view class="dr-patient" wx:if="{{patientShow}}">
     <view class="dr-patient-info">
-      <text class="info-tit g-tac">就诊人信息：</text>
-      <view class="info-list"><text class="weight500">姓</text><text class="weight500">名：</text><text>{{ptInfo.name}}</text><text wx:if="{{ptInfo.gender}}">{{ptInfo.gender==1 ? '男' : '女'}}</text><text wx:if="{{ptInfo.age}}">{{ptInfo.age}}岁</text></view>
-      <view class="info-list"><text class="weight500">医疗卡号：</text><text>{{ptInfo.mcard || '-'}}</text></view>
+      <view class="info-list"><text class="weight500">基本信息：</text><text>{{ptInfo.name}}</text><text wx:if="{{ptInfo.gender}}">{{ptInfo.gender==1 ? '  男  ' : '  女  '}}</text><text wx:if="{{ptInfo.age}}">{{ptInfo.age}}岁</text></view>
+      <view class="info-list"><text class="weight500">医疗卡号：</text><text>{{ptInfo.mcard || '无'}}</text></view>
       <view class="info-list"><text class="weight500">联系电话：</text><text>{{ptInfo.phone}}</text></view>
     </view>
   </view>
