--- a/wxDoctor/pages/drchat/drchat.wxss
+++ b/wxDoctor/pages/drchat/drchat.wxss
@@ -17,14 +17,25 @@
   left: 0;
   z-index: 10;
 }
-.drchat-menu text {
+.drchat-menu view {
   display: block;
   width: 50%;
+  height: 100%;
+  line-height: 90rpx;
   font-size: 30rpx;
   color: #1ed2af;
+  position: relative;
 }
-.drchat-menu text:last-child {
-  border-left: 1rpx solid #dcdcdc;
+.drchat-menu .menu-pait::before{
+  position: absolute;
+  top: 50%;
+  right: 0;
+  display: block;
+  content: '';
+  width: 1rpx;
+  height: 46rpx;
+  margin-top: -23rpx;
+  background-color: #dcdcdc;
 }
 .menu-end {
   position: fixed;
@@ -118,16 +129,16 @@
   margin-left:  20rpx;
 }
 .drchat-msg-r {
+  position: relative;
   max-width: 60%;
-  display: inline-block;
-  margin-left: 20rpx;
   padding: 24rpx 30rpx;
+  margin-left: 20rpx;
   background-color: #bef1e4;
   border-top-left-radius: 10rpx;
   border-top-right-radius: 0;
-  position: relative;
   font-size: 32rpx;
 }
+
 .chat-talk {
   width: 20rpx;
   height: 48rpx;
