--- a/wxDoctor/pages/patientchat/patientchat.wxml
+++ b/wxDoctor/pages/patientchat/patientchat.wxml
@@ -10,7 +10,8 @@
       <text class="g-tac drchat-time" wx:if="{{item.timeshow}}">{{item.ctime}}</text>
       <view wx:if="{{item.flag}}" class="drchat-r">
         <image class="drchat-head-r" src="{{item.ptHead}}"/>
-        <view wx:if="{{item.type==1}}" class="drchat-msg-r">{{item.content}}
+        <view wx:if="{{item.type==1}}" class="drchat-msg-r">
+          <text>{{item.content}}</text>
           <image class="chat-talk chat-talk-r" src="../../images/login/img_talk.png"/>
         </view>
         <view wx:else class="drchat-msg drchat-msg-r">
@@ -20,7 +21,8 @@
       </view>
       <view wx:else class="drchat-l">
         <image class="drchat-head" src="{{item.drHead}}"/>
-        <view wx:if="{{item.type==1}}" class="drchat-msg">{{item.content}}
+        <view wx:if="{{item.type==1}}" class="drchat-msg">
+          <text>{{item.content}}</text>
           <image class="chat-talk chat-talk-l" src="../../images/login/img_talk_white.png"/>
         </view>
         <view wx:if="{{item.type==2}}" class="drchat-msg drchat-msg-r">
