--- a/wxDoctor/pages/patientinfo/patientinfo.wxml
+++ b/wxDoctor/pages/patientinfo/patientinfo.wxml
@@ -2,11 +2,11 @@
 <view class="container patientinfo">
   <scroll-view class="patient-inner" scroll-y style="height: 100%;">
     <view class="patientinfo-list" wx:for="{{info}}" wx:for-index="idx" wx:key="ptinfo">
-      <view data-index="{{idx}}" bindtap="goPay">
+      <view data-index="{{idx}}" bindtouchstart="changeBg" bindtouchend="goPay" class="{{selId==idx ? 'bg' :''}}">
         <view class="patientinfo-list-top">
             <text class="list-top-text">{{item.name}}</text>
             <text class="list-top-text" wx:if="{{item.gender}}">{{item.gender==1 ? '男' : '女'}}</text>
-            <text class="list-top-text" wx:if="{{item.age}}" >{{item.age}}岁</text>
+            <text class="list-top-text" wx:if="{{item.age}}">{{item.age}}岁</text>
             <text class="list-top-text" wx:if="{{item.mcard}}">{{item.mcard}}</text>
         </view>
         <view class="patientinfo-list-top patientinfo-list-mid">
