--- a/wxDoctor/pages/drconfirm/drconfirm.wxml
+++ b/wxDoctor/pages/drconfirm/drconfirm.wxml
@@ -11,11 +11,11 @@
         value="{{iptMoney}}" 
         focus="{{iptFocus}}" 
         bindinput="bindFeeInput" placeholder="单位元">{{info.fee}}</input>
-      <button class="mon-btn" bindtap="saveFee">保存</button>
+      <button class="mon-btn" bindtouchend="saveFee">保存</button>
     </view>
     <text class="drconfirm-tip g-tac">如个人信息有误，请联系\n0755-86700641</text>
-    <view class="img-box">
-        <image class="drconfirm-codeimg" src="{{codeImg}}" data-src="{{codeImg}}" bindtap="previewImg"/>
+    <view class="img-box img-box2">
+        <image class="drconfirm-codeimg " src="{{codeImg}}" data-src="{{codeImg}}" bindtap="previewImg"/>
     </view>
     <text class="dr-text g-tac"><text class="coloraf"></text>让就诊人扫描\n即可绑定就诊人，接收回诊咨询</text>
   </scroll-view>
