--- a/wxDoctor/app.wxss
+++ b/wxDoctor/app.wxss
@@ -2,7 +2,7 @@
 page {
   height: 100%;
 }
-page,view,text,input,button,image{
+page,view,text,input,button,image,textarea{
   box-sizing: border-box;
 }
 .container {
@@ -85,4 +85,3 @@ page,view,text,input,button,image{
   height: 40rpx;
   margin-right: 10rpx;
 }
-
