--- a/wxDoctor/pages/scancode/scancode.wxss
+++ b/wxDoctor/pages/scancode/scancode.wxss
@@ -12,3 +12,10 @@
 .scan-btn {
   margin-top: 108rpx;
 }
+.help-btn {
+  margin-top: 36rpx;
+  color: #1ed2af;
+}
+.help-btn:after {
+  border: 2rpx solid #1ed2af;
+}
