--- a/wxDoctor/pages/drconfirm/drconfirm.wxml
+++ b/wxDoctor/pages/drconfirm/drconfirm.wxml
@@ -11,7 +11,7 @@
         value="{{iptMoney}}" 
         focus="{{iptFocus}}" 
         bindinput="bindFeeInput" placeholder="单位元">{{info.fee}}</input>
-      <button class="mon-btn" bindtouchend="saveFee">保存</button>
+      <button class="mon-btn" bindtouchstart="changeColor" bindtouchend="saveFee" style="background-color: {{btnBg}}">保存</button>
     </view>
     <text class="drconfirm-tip g-tac">如个人信息有误，请联系\n0755-86700641</text>
     <view class="img-box img-box2">
